# P2_educatif_system_analysis

./: .gitignore  README.md  df_final_decorrele.csv  edstatscorrection_reorganise_corrige.ipynb  edstatscorrection_reorganise_sur_mesure.ipynb  pyproject.toml  top_pays_recommandes.csv
notebooks/: edstats.ipynb
