[project]
name = "oc-edstats-analysis"
version = "0.1.0"
description = "Analyse exploratoire des systemes educatifs"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas==2.3.3",
    "numpy==2.3.2",
    "matplotlib==3.10.7",
    "seaborn==0.13.2",
    "jupyterlab==4.5.5",
    "notebook==7.5.4",
    "ipykernel==7.2.0",
    "missingno==0.5.2"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
